--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -4,6 +4,7 @@
     max-width: 350px;
     background: $white-color;
     border-radius: 10px;
+    margin-bottom: 20px;
 
     .product-img {
         max-width: 350px;
