--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -7,25 +7,28 @@
     margin-bottom: 20px;
 
     .product-img {
-        max-width: 350px;
         position: relative;
-        background: #ffc6c6;
+        border-bottom: 1px solid rgba(255, 198, 198, 0.40);
         border-radius: 10px 10px 0 0;
+        display: flex;
+        vertical-align: middle;
+        height: 290px;
+        justify-content: center;
+        align-items: center;
 
         img {
-            max-width: 350px;
-            margin: auto;
+            max-width: 200px;
         }
 
         .product-fav {
             position: absolute;
-            right: 10px;
-            top: 10px;
+            right: 15px;
+            top: 15px;
             border: 0;
             width: 30px;
             height: 30px;
             text-align: center;
-            background: $white-color;
+            background: #e0e5e9;
             color: $blue-color;
             box-shadow: rgba(146, 153, 184, 0.082) 0px 5px 10px;
             border-radius: 30px;
@@ -39,6 +42,11 @@
             font-size: 22px;
             color: $black-color;
             margin-bottom: 0px;
+            transition: .5s;
+
+            &:hover {
+                color: $blue-color;
+            }
         }
 
         .price-text {
