--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,7 +1,7 @@
 @import '../../assets/scss/style.scss';
 
 .product-box {
-    max-width: 350px;
+    max-width: 100%;
     background: $white-color;
     border-radius: 10px;
     margin-bottom: 20px;
