--- a/src/components/ProductTwo/ProductTwo.scss
+++ b/src/components/ProductTwo/ProductTwo.scss
@@ -1,9 +1,9 @@
 @import '../../assets/scss/style.scss';
 
 .product-two-box {
-    max-width: 350px;
     box-shadow: rgba(3, 0, 71, 0.09) 0px 2px 10px;
-
+    margin-bottom: 20px;
+    
     .product-img {
         position: relative;
         background: #F7F7F7;
