--- a/src/components/Latest/Latest.scss
+++ b/src/components/Latest/Latest.scss
@@ -1,7 +1,7 @@
 @import '../../assets/scss/style.scss';
 
-
 .latest-section {
     padding-top: 100px;
     padding-bottom: 70px;
+    background: rgb(244, 245, 247);;
 }
