--- a/src/components/TabsItem/TabsItem.scss
+++ b/src/components/TabsItem/TabsItem.scss
@@ -4,7 +4,7 @@
 
     .react-tabs__tab-list {
         border-bottom: 0;
-        margin: 0;
+        margin: 0 0 30px 0;
         text-align: center;
     }
 
@@ -17,5 +17,6 @@
 
     .react-tabs__tab--selected {
         color: $pink-color;
+        font-weight: 600;
     }
 }
