why choose section done

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -4,6 +4,7 @@ $white-color: #FFFFFF;
 $navy-color: #1A0B5B;
 $black-color: #222222;
 $pink-color: #FB2E86;
+$gray-color: #9DB2BF;
 
 //== Fonts Variables
 $theme-font: 'Josefin Sans', sans-serif;
