--- a/src/components/ProductTwo/ProductTwo.scss
+++ b/src/components/ProductTwo/ProductTwo.scss
@@ -3,12 +3,13 @@
 .product-two-box {
     box-shadow: rgba(3, 0, 71, 0.09) 0px 2px 10px;
     margin-bottom: 20px;
-    
+    background: $white-color;
+
     .product-img {
         position: relative;
-        background: #F7F7F7;
         padding: 20px;
         text-align: center;
+        border-bottom: 1px solid #dddddd;
 
        .product-extra {
             position: absolute;
