--- a/src/shared/Footer/Footer.scss
+++ b/src/shared/Footer/Footer.scss
@@ -1,5 +1,25 @@
 @import '../../assets/scss/style.scss';
 
 footer {
+    background: #EEEFFB;
+    border-top: 1px solid #d5d5ff;
+    padding: 50px 0;
 
+    .company-info {
+        .company-contact {
+            padding: 20px 0;
+            list-style-type: none;
+
+            li {
+                font-size: 17px;
+                color: #8A8FB9;
+            }
+        }
+    }
+
+    .company-social {
+        a {
+           font-size: 20px; 
+        }
+    }
 }
