--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -5,6 +5,7 @@
     background: $white-color;
     border-radius: 10px;
     margin-bottom: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 8px 15px -5px, rgba(0, 0, 0, 0.1) 0px 0px 10px -8px;
 
     .product-img {
         background: #dee2e6;
