--- a/src/components/ProductTwo/ProductTwo.scss
+++ b/src/components/ProductTwo/ProductTwo.scss
@@ -1,7 +1,7 @@
 @import '../../assets/scss/style.scss';
 
 .product-two-box {
-    box-shadow: rgba(3, 0, 71, 0.09) 0px 2px 10px;
+    border: 1px solid rgba(3, 0, 71, .09);
     margin-bottom: 20px;
     background: $white-color;
 
