--- a/src/components/WhyChoose/WhyChoose.scss
+++ b/src/components/WhyChoose/WhyChoose.scss
@@ -2,24 +2,36 @@
 
 .why-choose {
     padding: 50px 0 30px;
-    background: #EEEFFB;
+    background: rgba(3, 0, 71, .09);
 
     .why-choose-box {
         margin-bottom: 20px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+                    rgba(0, 0, 0, 0.10) 0px 8px 16px -8px;;
+        padding: 25px;
+        border-radius: 10px;
+        text-align: center;
+        background: $white-color;
 
         .why-choose-icon {
-            margin-bottom: 25px;
+            background: rgb(243, 245, 249);
+            width: 70px;
+            height: 70px;
+            border-radius: 70px;
+            line-height: 70px;
+            margin: auto;
+
+            img {
+                max-width: 40px;
+            }
         }
 
         .why-choose-content {
             h3 {
-                margin-bottom: 10px;
+                font-size: 22px;
+                margin: 20px 0 0px;
             }
-    
-            p {
-                margin-bottom: 0;
-                color: $gray-color;
-            }
+
         }
     }
 }
