--- a/src/components/WhyChoose/WhyChoose.scss
+++ b/src/components/WhyChoose/WhyChoose.scss
@@ -26,7 +26,7 @@
             }
         }
 
-        .why-choose-content {
+        .why-ch0oose-content {
             h3 {
                 font-size: 22px;
                 margin: 20px 0 0px;
