footer and why choose

--- a/src/components/WhyChoose/WhyChoose.scss
+++ b/src/components/WhyChoose/WhyChoose.scss
@@ -26,7 +26,9 @@
             }
         }
 
-        .why-ch0oose-content {
+        .why-choose-content {
+            margin-top: 20px;
+
             h3 {
                 font-size: 22px;
                 margin: 20px 0 0px;
