--- a/src/templates/Shop/ShopTemp.scss
+++ b/src/templates/Shop/ShopTemp.scss
@@ -1,3 +1,9 @@
 .shop-wrapper { 
     background: rgb(244, 245, 247);
+    .page-title {
+        background-color: #e4e1ff;
+        padding: 50px 0;
+        font-size: 50px;
+        margin-bottom: 50px;
+    }
 }
