--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -7,4 +7,4 @@ $pink-color: #FB2E86;
 $gray-color: #9DB2BF;
 
 //== Fonts Variables
-$theme-font: 'Josefin Sans', sans-serif;
+$theme-font: 'Lato', sans-serif;
