--- a/src/index.scss
+++ b/src/index.scss
@@ -3,4 +3,4 @@
 /*
 Google Fonts
 */ 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
