--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,8 +3,7 @@ $blue-color: #7E33E0;
 $white-color: #FFFFFF;
 $navy-color: #1A0B5B;
 $black-color: #222222;
-$pink-color: #FB2E86;
 $gray-color: #9DB2BF;
 
 //== Fonts Variables
-$theme-font: 'Lato', sans-serif;
+$theme-font: 'Poppins', sans-serif;
