--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -19,7 +19,7 @@
                 &:before {
                     width: 15px;
                     height: 5px;
-                    background: $pink-color;
+                    background: $black-color;
                     content: '';
                     right: 0;
                     margin: auto;
