--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -59,7 +59,7 @@
             }
 
             .price-off {
-                color: $pink-color;
+                color: $black-color;
                 font-size: 14px;
             }
         }
