--- a/src/components/ProductTwo/ProductTwo.scss
+++ b/src/components/ProductTwo/ProductTwo.scss
@@ -64,7 +64,7 @@
             font-weight: 600;
 
             del {
-                color: $pink-color;
+                color: $black-color;
                 font-weight: normal;
             }
         }
