--- a/src/components/PromoBar/Promo.scss
+++ b/src/components/PromoBar/Promo.scss
@@ -1,7 +1,6 @@
 @import '../../assets/scss/style.scss';
-;
 .promo-bar {
-    background: rgb(255, 73, 73);
+    background: $black-color;
     color: $white-color;
     font-size: 17px;
     border-radius: 0;
@@ -10,5 +9,9 @@
 
     button {
         padding: 10px 10px !important;
+
+        &.btn-close {
+            color: $white-color;
+        }
     }
 }
