--- a/src/components/TabsItem/TabsItem.scss
+++ b/src/components/TabsItem/TabsItem.scss
@@ -24,10 +24,10 @@
     }
 
     .react-tabs__tab--selected {
-        color: $pink-color;
+        color: $black-color;
         font-weight: 600;
         border-radius: unset;
         background: transparent;
-        border-bottom: 2px solid $pink-color;
+        border-bottom: 2px solid $black-color;
     }
 }
