--- a/src/components/ThemeButton/ThemeBtn.scss
+++ b/src/components/ThemeButton/ThemeBtn.scss
@@ -1,14 +1,14 @@
 @import '../../assets/scss/style.scss';
 
 .theme-btn {
-    background: $pink-color;
+    background: $black-color;
     color: $white-color;
     padding: 10px 45px;
     transition: .5s;
-    border: 1px solid $pink-color;
+    border: 1px solid $black-color;
 
     &:hover {
-        background: transparent;
-        color: $pink-color;
+        background: $white-color;
+        color: $black-color;
     }
 }
