--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -56,7 +56,7 @@
             }
 
             .price-off {
-                color: $pink-color;
+                color: $black-color;
                 font-size: 14px;
             }
         }
