--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,7 +3,7 @@ $blue-color: #7E33E0;
 $white-color: #FFFFFF;
 $navy-color: #1A0B5B;
 $black-color: #222222;
-$gray-color: #9DB2BF;
+$gray-color: #858585;
 
 //== Fonts Variables
 $theme-font: 'Poppins', sans-serif;
