--- a/src/components/Sliders/Sliders.scss
+++ b/src/components/Sliders/Sliders.scss
@@ -25,12 +25,12 @@
                     color: $black-color;
                     font-size: 50px;
                     font-weight: 600;
-                    margin-bottom: 15px;
+                    margin-bottom: 25px;
                 }
                 p {
                     font-size: 20px;
-                    color: #8A8FB9;
-                    margin-bottom: 25px;
+                    color: $gray-color;
+                    margin-bottom: 30px;
                 }
             }
     
@@ -42,7 +42,7 @@
 
         .slick-dots {
             position: absolute;
-            bottom: 20px;
+            bottom: -40px;
             left: 0;
             right: 0;
             margin: auto;
