--- a/src/templates/ProductDetails/ProductDetails.scss
+++ b/src/templates/ProductDetails/ProductDetails.scss
@@ -1,7 +1,12 @@
 @import '../../assets/scss/style.scss';
 
 .product-details {
-    .product-details-text {
+    .product-img {
+        max-width: 400px;
+        margin: auto;
+    }
+
+    .product-info-text {
         .product-title {
             font-size: 28px;
             margin-bottom: 10px;
@@ -74,6 +79,7 @@
                 display: inline-block;
                 margin-right: 22px;
                 font-weight: 500;
+                margin-bottom: 5px;
 
                 svg {                   
                     background: #dee2e6;
@@ -83,6 +89,33 @@
                     padding: 4px;
                     border-radius: 30px;
                 }
+            }
+        }
+    }
+
+    .product-details-text {
+        margin-top: 50px;
+        margin-bottom: 50px;
+
+        .theme-tabs {
+            .react-tabs__tab-list {
+                margin: 0;
+                text-align-last: left;
+            }
+
+            .react-tabs__tab {
+                margin: 0 5px 20px 0 !important;
+                background: $white-color;
+                box-shadow: rgba(50, 50, 93, 0.31) 4px 8px 5px -5px, rgba(0, 0, 0, 0.1) 0px 0px 10px -8px;
+                padding: 5px 15px;
+                border-radius: 5px;
+                color: $navy-color;
+            }
+
+            .react-tabs__tab--selected {
+                font-weight: 400;
+                background: $black-color;
+                color: $white-color;
             }
         }
     }
