--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -13,6 +13,7 @@
         background: #dee2e6;
         position: relative;
         width: 40%;
+        padding: 30px;
         
         .product-fav {
             position: absolute;
