--- a/src/shared/Navbar/Navbar.scss
+++ b/src/shared/Navbar/Navbar.scss
@@ -27,12 +27,14 @@
         .menu-icon {
             margin: 0 5px;
             border: none;
+            text-align: center;
             font-size: 22px;
             position: relative;
             background: #eceef3;
             width: 40px;
             height: 40px;
             border-radius: 40px;
+            color: $black-color;
 
             .cart-item {
                 position: absolute;
