--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -113,6 +113,7 @@
                 svg {
                     position: relative;
                     top: -2px;
+                    margin-right: 6px;
                 }
             }  
 
