--- a/src/components/Sliders/Sliders.scss
+++ b/src/components/Sliders/Sliders.scss
@@ -2,7 +2,7 @@
 
 .slider-wrapper {
     background: #dee2e6;   
-    margin: 25px;
+    margin: 100px 25px 0;
     border-radius: 25px;
     padding: 50px 0;
 
