--- a/src/templates/ProductDetails/ProductDetails.scss
+++ b/src/templates/ProductDetails/ProductDetails.scss
@@ -1,6 +1,8 @@
 @import '../../assets/scss/style.scss';
 
 .product-details {
+    padding-top: 150px;
+    
     .product-img {
         max-width: 400px;
         margin: auto;
