--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,36 +1,23 @@
 @import '../../assets/scss/style.scss';
 
 .login-section {
-    padding: 150px 0 100px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
 
-    h3 {
-        font-size: 25px;
-        margin-bottom: 30px;
-    }
-    
-    .login-wrapper, 
-    .signup-wrapper {
-        .login-form,
-        .signup-form {
-            .form-group {
-                margin-bottom: 20px;
+    .login-wrapper {
+        max-width: 600px;
+        margin: auto;
+        box-shadow: rgba(17, 12, 46, 0.10) 0px 0px 20px 0px;
+        padding: 30px;
+        align-items: center;
 
-                label {
-                    margin-bottom: 2px;
-                    font-size: 14px;
-                }
-
-                .form-control {
-                    margin-bottom: 15px;
-                    height: 45px;
-                    border-radius: 0;
-
-                    &:focus {
-                        border: 1px solid $black-color;
-                        box-shadow: none;
-                    }
-                }
-            }
+        .form-control {
+            margin-bottom: 15px;
+            border: 0;
+            border-bottom: 1px solid #dddddd;
+            border-radius: 0;
+            box-shadow: none;
         }
     }
 }
