--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -1,11 +1,11 @@
 @import '../../assets/scss/style.scss';
 
-.login-section {
+.signin-section {
     height: 100vh;
     display: flex;
     align-items: center;
 
-    .login-wrapper {
+    .signin-wrapper {
         max-width: 600px;
         margin: auto;
         box-shadow: rgba(17, 12, 46, 0.10) 0px 0px 20px 0px;
@@ -18,6 +18,14 @@
             border-bottom: 1px solid #dddddd;
             border-radius: 0;
             box-shadow: none;
+        }
+
+        .signin-btn {
+            margin-top: 10px;
+            background: $black-color;
+            border: 1px solid $black-color;
+            color: $white-color;
+            padding: 10px 30px;
         }
     }
 }
