--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -12,20 +12,72 @@
         padding: 30px;
         align-items: center;
 
-        .form-control {
-            margin-bottom: 15px;
-            border: 0;
-            border-bottom: 1px solid #dddddd;
-            border-radius: 0;
-            box-shadow: none;
+        .signin-form {
+            margin-bottom: 30px;
+
+            .form-title {
+                margin-bottom: 30px;
+                font-size: 30px;
+            }
+
+            .input-container {
+                margin-bottom: 20px;
+
+                .form-control {
+                    border: 1px solid #dddddd;
+                    border-radius: 3px;
+                    box-shadow: none;
+
+                    &:focus {
+                        border: 1px solid $black-color;
+                    }
+                }
+
+                .input-alert {
+                    font-size: 12px;
+                    color: red;
+                    font-weight: 500;
+                    letter-spacing: .1px;
+                }
+            }
+    
+            .signin-btn {
+                margin-top: 10px;
+                background: $black-color;
+                border: 1px solid $black-color;
+                color: $white-color;
+                padding: 10px 30px;
+
+                &:hover {
+                    background: #606060;
+                }
+            }
         }
 
-        .signin-btn {
-            margin-top: 10px;
-            background: $black-color;
-            border: 1px solid $black-color;
-            color: $white-color;
-            padding: 10px 30px;
+        .social-singin {
+            margin-bottom: 30px;
+
+            .social-btn {
+                border: 1px solid $black-color;
+                padding: 10px 20px;
+                margin: 0 5px;
+                border-radius: 5px;
+                width: 100%;
+
+                svg {
+                    font-size: 22px;
+                    margin-right: 5px;
+                }
+            }
+        }
+
+        .toggleSignIn {
+            all: unset;
+            color: $black-color;
+            font-weight: 500;
+            border-bottom: 1px solid $black-color;
+            cursor: pointer;
+            margin-left: 5px;
         }
     }
 }
