--- a/src/shared/Navbar/Navbar.scss
+++ b/src/shared/Navbar/Navbar.scss
@@ -30,25 +30,47 @@
     }
 
     .header-right {
-        .menu-icon {
+        display: flex;
+
+        .header-signin, .header-account {
+            color: #eceef3;
+            background: $black-color;
+            padding: 10px 20px;
+            border-radius: 5px;
             margin: 0 5px;
-            border: none;
+        }
+
+        .header-account {
+            background: $navy-color;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: start;
+
+            span {
+                font-size: 12px;
+                display: block;
+            }
+        }
+
+        .menu-cart {
+            margin: 0 10px;
             text-align: center;
             font-size: 22px;
             position: relative;
-            background: #eceef3;
             width: 40px;
             height: 40px;
-            border-radius: 40px;
+            border-radius: 5px;
             color: $black-color;
+            box-shadow: rgba(50, 50, 93, 0.2) 0px 5px 3px -5px, rgba(0, 0, 0, 0.5) 0px 0px 1px 0px;
 
             .cart-item {
                 position: absolute;
-                top: 0px;
-                right: -8px;
-                font-size: 13px;
-                background: $blue-color;
-                color: $white-color;
+                top: -8px;
+                right: -5px;
+                font-size: 14px;
+                background: #e9ecef;
+                color: $black-color;
                 width: 18px;
                 height: 18px;
                 border-radius: 50px;
