--- a/src/pages/Signin/Signin.scss
+++ b/src/pages/Signin/Signin.scss
@@ -8,7 +8,7 @@
     .signin-wrapper {
         max-width: 600px;
         margin: auto;
-        box-shadow: rgba(17, 12, 46, 0.10) 0px 0px 20px 0px;
+        box-shadow: rgba(50, 50, 93, 0.2) 0px 5px 3px -5px, rgba(0, 0, 0, 0.5) 0px 0px 1px 0px;
         padding: 30px;
         align-items: center;
 
@@ -16,7 +16,7 @@
             margin-bottom: 30px;
 
             .form-title {
-                margin-bottom: 30px;
+                margin-bottom: 50px;
                 font-size: 30px;
             }
 
@@ -25,7 +25,7 @@
 
                 .form-control {
                     border: 1px solid #dddddd;
-                    border-radius: 3px;
+                    border-radius: 5px;
                     box-shadow: none;
 
                     &:focus {
@@ -50,24 +50,49 @@
                 background: $black-color;
                 border: 1px solid $black-color;
                 color: $white-color;
-                padding: 10px 30px;
+                padding: 8px 30px;
                 width: 100%;
+                border-radius: 5px;
 
                 &:hover {
-                    background: #606060;
+                    background: #494848;
                 }
             }
         }
 
         .social-singin {
-            margin-bottom: 30px;
+            margin-bottom: 50px;
+
+            .social-divider {
+                text-align: center;
+                margin-bottom: 20px;
+                position: relative;
+
+                &::before {
+                    position: absolute;
+                    content: '';
+                    top: 11px;
+                    left: 0;
+                    width: 100%;
+                    height: 1px;
+                    background: #858585;
+                    z-index: -1;
+                }
+
+                span {
+                    color: #858585;
+                    font-size: 14px;
+                    padding: 0 10px;
+                    background: $white-color;
+                }
+            }
 
             .social-btn {
-                border: 1px solid $black-color;
-                padding: 10px 20px;
-                margin: 0 5px;
+                border: 1px solid #dddddd;
+                padding: 8px 20px;
                 border-radius: 5px;
                 width: 100%;
+                background: #e9ecef;
 
                 svg {
                     font-size: 22px;
