user authentication done

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,8 +1,11 @@
+@import '../../assets/scss/variables.scss';
+
 .dashboard-section {
     .dashboard-top {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-bottom: 50px;
 
         .dashboard-text {
             p {
@@ -21,6 +24,42 @@
 
             img {
                 max-width: 100px;
+            }
+        }
+    }
+
+    .dashboard-data {
+        .single-data {
+            background: #dee2e6;
+            padding: 20px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            
+            .icon {
+                display: inline-block;
+                background: $blue-color;
+                color: $white-color;
+                width: 40px;
+                height: 40px;
+                text-align: center;
+                line-height: 40px;
+                border-radius: 30px;
+                margin-right: 20px;
+                
+                svg {
+                    font-size: 20px;
+                }
+            }
+
+
+            p {
+                margin-bottom: 5px;
+                color: $black-color;
+                font-weight: 500;
+            }
+            h3 {
+                margin-bottom: 0;
             }
         }
     }
